--- a/cfg/sourcemod/kztimer/main.cfg
+++ b/cfg/sourcemod/kztimer/main.cfg
@@ -5,8 +5,6 @@
 //
 // KZ Settings Enforcer: kz_prespeed_cap 380.0;sv_staminalandcost 0;sv_maxspeed 320; sv_staminajumpcost 0; 
 // sv_gravity 800; sv_airaccelerate 100; sv_friction 4.8;sv_accelerate 6.5;sv_maxvelocity 2000;sv_cheats 0;sv_enablebunnyhopping 1
-//
-// KZ Clean Weapons sets sv_infinite_ammo 0
 
 // server cvars
 bot_chatter off
@@ -26,3 +24,5 @@ sv_full_alltalk 1
 sv_max_queries_sec 6
 sv_pure 0
 weapon_reticle_knife_show 1
+sv_infinite_ammo 2
+log off
