--- a/cfg/sourcemod/kztimer/main.cfg
+++ b/cfg/sourcemod/kztimer/main.cfg
@@ -1,6 +1,6 @@
 // KZTimer Main Config
 //
-// Hard-coded: mp_endmatch_votenextmap 0;mp_do_warmup_period 0;mp_warmuptime 0;mp_match_can_clinch 0;mp_match_end_changelevel 1;mp_match_restart_delay 10
+// Hard coded: mp_endmatch_votenextmap 0;mp_do_warmup_period 0;mp_warmuptime 0;mp_match_can_clinch 0;mp_match_end_changelevel 1;mp_match_restart_delay 10
 // mp_endmatch_votenextleveltime 10;mp_endmatch_votenextmap 0;mp_halftime 0;bot_zombie 1;mp_do_warmup_period 0;mp_maxrounds 1
 //
 // KZ Settings Enforcer: kz_prespeed_cap 380.0;sv_staminalandcost 0;sv_maxspeed 320; sv_staminajumpcost 0; 
@@ -24,6 +24,5 @@ sv_full_alltalk 1
 sv_max_queries_sec 6
 sv_pure 0
 weapon_reticle_knife_show 1
-sv_hudhint_sound 0
 sv_infinite_ammo 2
 log off
