--- a/addons/sourcemod/configs/kztimer/skillgroups.cfg
+++ b/addons/sourcemod/configs/kztimer/skillgroups.cfg
@@ -1,4 +1,4 @@
-//Percentage: percentage * (MaxPointsFromMaps + MaxPointsFromJumpstats)
+//Points for skill group 2-9: percentage * (MaxPointsFromMaps +MaxPointsFromJumpstats)
 //MaxPointsFromMaps = MapCount * 1300p
 //MaxPointsFromJumpstats = 6 * 500p (500p per JumpStats type)
 "KZTimer.SkillGroups"
@@ -45,6 +45,6 @@
 	"9"
 	{
 		"name"				"PRO"
-		"percentage"        "0.28"
+		"percentage"        "0.3"
 	}	
 }
