--- a/cfg/sourcemod/kztimer/map_types/bhop_.cfg
+++ b/cfg/sourcemod/kztimer/map_types/bhop_.cfg
@@ -1,15 +1,21 @@
-kz_jumpstats 0
-kz_auto_timer 1
-kz_settings_enforcer 0
-kz_prespeed_cap 800.0
-sv_staminalandcost 0
-sv_maxspeed 320
-sv_staminajumpcost 0
-sv_gravity 800
-sv_airaccelerate 150
-sv_wateraccelerate 150
-sv_friction 4.8
-sv_accelerate 6.5
-sv_maxvelocity 800
-sm_cvar sv_enablebunnyhopping 1
-sv_cheats 0
+kz_checkpoints 1
+kz_auto_timer 0
+kz_jumpstats 1
+kz_settings_enforcer 1
+
+//auto bhop settings
+//kz_jumpstats 0
+//kz_auto_timer 1
+//kz_settings_enforcer 0
+//kz_prespeed_cap 800.0
+//sv_staminalandcost 0
+//sv_maxspeed 320
+//sv_staminajumpcost 0
+//sv_gravity 800
+//sv_airaccelerate 150
+//sv_wateraccelerate 150
+//sv_friction 4.8
+//sv_accelerate 6.5
+//sv_maxvelocity 800
+//sm_cvar sv_enablebunnyhopping 1
+//sv_cheats 0
