--- a/addons/sourcemod/configs/kztimer/skillgroups.cfg
+++ b/addons/sourcemod/configs/kztimer/skillgroups.cfg
@@ -5,46 +5,46 @@
 {
 	"1"
 	{
-		"name"				"NEW"
+		"name"				"NEWB"
 	}	
 	"2"
 	{
 		"name"				"SCRUB"
-		"percentage"        "0.0005"
+		"percentage"        "0.00005"
 	}
 	"3"
 	{
 		"name"				"TRAINEE"
-		"percentage"        "0.013"
+		"percentage"        "0.003"
 	}	
 	"4"
 	{
 		"name"				"CASUAL"
-		"percentage"        "0.03"
+		"percentage"        "0.01"
 	}	
 	"5"
 	{
 		"name"				"REGULAR"
-		"percentage"        "0.05"
+		"percentage"        "0.017"
 	}	
 	"6"
 	{
 		"name"				"SKILLED"
-		"percentage"        "0.075"
+		"percentage"        "0.05"
 	}	
 	"7"
 	{
 		"name"				"EXPERT"
-		"percentage"        "0.12"
+		"percentage"        "0.1"
 	}	
 	"8"
 	{
 		"name"				"SEMIPRO"
-		"percentage"        "0.18"
+		"percentage"        "0.17"
 	}	
 	"9"
 	{
 		"name"				"PRO"
-		"percentage"        "0.3"
+		"percentage"        "0.27"
 	}	
 }
